# Internet.nl-ct-log-subdomain-suggestions-api

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  bulk_insert_performance_research.md  compose.yml  flake.nix  pyproject.toml  requirements-deploy.in  requirements-deploy.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: build.yml
app/: settings.py  urls.py
nix/: module.nix  vm-base.nix
nix/pkgs/: certstream-server-go.nix  certstream.nix  ctlssa.nix  pysimdjson.nix
src/ctlssa/: manage.py
src/ctlssa/app/: settings.py  urls.py
src/ctlssa/suggestions/: apps.py  models.py  urls.py  views.py
src/ctlssa/suggestions/fixtures/: testdata.json
src/ctlssa/suggestions/logic/: bulk_ingest.py  domains.py  ingest.py  suggest.py
src/ctlssa/suggestions/management/commands/: bulk_ingest.py  ingest.py
src/ctlssa/suggestions/tests/: test_bulk_ingest.py  test_ingest.py
suggestions/: urls.py  views.py
suggestions/fixtures/: testdata.json
suggestions/logic/: bulk_ingest.py  domains.py  ingest.py  suggest.py
suggestions/management/commands/: ingest.py
suggestions/migrations/: 0001_initial.py
suggestions/tests/: sample_merklemap_data.xz  sample_merklemap_sample_data.jsonl  test_ingest.py  test_suggest.py
tests/: conftest.py  test_bulk_ingest.py  test_ingest.py  test_suggest.py
