[project]
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]
name = "ctlssa"
readme = "README.md"
version = "1.0.0"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}, deploy = {file = ["requirements-deploy.txt"]}}

[project.scripts]
ctlssa = "ctlssa.manage:main"
