[project]
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]
name = "ctlssa"
readme = "README.md"
# overwritten during CI build using VERSION/SETUPTOOLS_SCM_PRETEND_VERSION
version = "0.0.0-dev0"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}, deploy = {file = ["requirements-deploy.txt"]}}

[project.scripts]
ctlssa = "ctlssa.manage:main"

[tool.setuptools.package-data]
"*" = ["*.json"]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[tool.black]
line-length = 120
exclude = "vendor/|docs/|\\..+/"

[tool.isort]
line_length = 120
